--- a/recipes/spaghetti.html
+++ b/recipes/spaghetti.html
@@ -12,14 +12,19 @@
     <h3>Description</h3>
         <p>Unlike a lot of recipes out there for spaghetti carbonara, this is the true Italian recipe from an Italian! You can't get more authentic than this recipe! Top with extra Pecorino-Romano cheese, salt, and pepper. Note there's no cream, just eggs, and Pecorino Romano cheese is used, not Parmesan.</p>
         <h3>Ingredients</h3>  
-        <ul>
-            <li>1 (14 ounce) package spaghetti</li>
-            <li>5 ounces guanciale (cured pork cheek), cut into small cubes</li>
-            <li>3 egg yolks</li>
-            <li>1 egg</li>
-            <li>¾ cup grated Pecorino-Romano cheese</li>
-            <li>salt and freshly ground black pepper to taste</li>
-            
-        </ul> 
+            <ul>
+                <li>1 (14 ounce) package spaghetti</li>
+                <li>5 ounces guanciale (cured pork cheek), cut into small cubes</li>
+                <li>3 egg yolks</li>
+                <li>1 egg</li>
+                <li>¾ cup grated Pecorino-Romano cheese</li>
+                <li>salt and freshly ground black pepper to taste</li>
+            </ul>
+        <h3>Ingredients</h3>  
+            <ol>
+                <li>Bring a large pot of lightly salted water to a boil. Cook spaghetti in the boiling water, stirring occasionally until tender yet firm to the bite, about 12 minutes. Drain.</li>
+                <li>Heat a skillet over medium heat; cook and stir guanciale until crisp, 5 to 10 minutes.</li>
+                <li>Whisk egg yolks and egg together in a bowl; add Pecorino-Romano cheese, salt, and pepper and whisk well. Stir in guanciale. Add spaghetti and toss until evenly coated.</li>    
+            </ol> 
     </body>
 </html>
