ready sausage page

--- a/recipes/sausage.html
+++ b/recipes/sausage.html
@@ -8,9 +8,24 @@
 </head>
 <body>
     <h1>World's Best Lasagna</h1>
-    <img src="../images/lasagna.jpg">
+    <img src="../images/sausage.jpg">
     <h3>Description</h3>
-        <p>When John Chandler submitted this lasagna recipe to Allrecipes more than 20 years ago, he had no idea how successful it would become. One of our top-performing recipes of all time, World's Best Lasagna racks up more than 7 million views per year and has ranked among the most popular lasagna recipes on the internet for two decades. Unfortunately, John unexpectedly passed away at 53 years old — read all about his life and legacy here.</p>
-        <p>Make our most popular lasagna today to find out what all the fuss is about!</p>
+        <p>This simple and delicious one-pan sausage and peppers recipe has been used in our family for years and years now. Serve in a roll, or use as a topping for pizza or pasta. For an extra kick, try using 1/2 sweet Italian sausage and 1/2 hot sausage!</p>
+        <h3>Ingredients</h3>  
+            <ul>
+                <li>Italian Sausage: Sweet Italian sausage is perfect for this top-rated recipe. To turn up the heat a bit, try using half hot Italian sausage.</li>
+                <li>Butter: Two tablespoons of butter is all you'll need to sauté the veggies. Of course, you could substitute olive oil if you prefer.</li>
+                <li>Onions: Slice one yellow onion and half of one red onion. If you prefer a milder flavor, just use one and a half yellow onions.</li>
+                <li>Garlic: Mince four cloves of fresh garlic to add to the vegetable mixture for authentic Italian flavor.</li>
+                <li>Bell Peppers: Slice one red pepper and one green bell pepper.</li>
+                <li>Spices and Seasonings: This sausage and peppers recipe is simply seasoned with dried basil and dried oregano.</li>
+                <li>Wine: Opt for a dry white wine such as pinot grigio or sauvignon blanc. If you don't have any wine on hand, reviewers say they've had success substituting with chicken broth or beer.</li>
+            </ul>
+        <h3>Ingredients</h3>  
+            <ol>
+                <li>Bring a large pot of lightly salted water to a boil. Cook spaghetti in the boiling water, stirring occasionally until tender yet firm to the bite, about 12 minutes. Drain.</li>
+                <li>Heat a skillet over medium heat; cook and stir guanciale until crisp, 5 to 10 minutes.</li>
+                <li>Whisk egg yolks and egg together in a bowl; add Pecorino-Romano cheese, salt, and pepper and whisk well. Stir in guanciale. Add spaghetti and toss until evenly coated.</li>    
+            </ol> 
     </body>
 </html>
