--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <a href="./recipes/lasagna.html">World's Best Lasagna</a>
-    <a href="./recipes/spaghetti.html">Spaghetti Alla Carbonara Tradizionali</a>
+    <li><a href="./recipes/lasagna.html">World's Best Lasagna</a></li>
+    <li><a href="./recipes/spaghetti.html">Spaghetti Alla Carbonara Tradizionali</a></li>
+    <li><a href="./recipes/sausage.html">Sausage, Peppers, and Onions</a></li>
 </body>
 </html>
