html fundations project ready

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
+    <img src="./images/italian-chef-cartoon-illustration-character-65541017.jpg">
     <li><a href="./recipes/lasagna.html">World's Best Lasagna</a></li>
     <li><a href="./recipes/spaghetti.html">Spaghetti Alla Carbonara Tradizionali</a></li>
     <li><a href="./recipes/sausage.html">Sausage, Peppers, and Onions</a></li>
