--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -23,7 +23,7 @@
                 <li>Cheeses: Parmesan, mozzarella, and ricotta cheese make this lasagna extra decadent.</li>
                 <li>Egg: An egg helps bind the ricotta so it doesn't ooze out of the lasagna when you cut into it.</li>
             </ul>
-        <h3>Ingredients</h3>  
+        <h3>Steps</h3>  
             <ol>
                 <li>Bring a large pot of lightly salted water to a boil. Cook spaghetti in the boiling water, stirring occasionally until tender yet firm to the bite, about 12 minutes. Drain.</li>
                 <li>Heat a skillet over medium heat; cook and stir guanciale until crisp, 5 to 10 minutes.</li>
