--- a/recipes/sausage.html
+++ b/recipes/sausage.html
@@ -21,11 +21,11 @@
                 <li>Spices and Seasonings: This sausage and peppers recipe is simply seasoned with dried basil and dried oregano.</li>
                 <li>Wine: Opt for a dry white wine such as pinot grigio or sauvignon blanc. If you don't have any wine on hand, reviewers say they've had success substituting with chicken broth or beer.</li>
             </ul>
-        <h3>Ingredients</h3>  
+        <h3>Steps</h3>  
             <ol>
-                <li>Bring a large pot of lightly salted water to a boil. Cook spaghetti in the boiling water, stirring occasionally until tender yet firm to the bite, about 12 minutes. Drain.</li>
-                <li>Heat a skillet over medium heat; cook and stir guanciale until crisp, 5 to 10 minutes.</li>
-                <li>Whisk egg yolks and egg together in a bowl; add Pecorino-Romano cheese, salt, and pepper and whisk well. Stir in guanciale. Add spaghetti and toss until evenly coated.</li>    
+                <li>Cook sausage in a large skillet over medium heat until brown on all sides, 5 to 7 minutes. Remove from skillet, and slice.</li>
+                <li>Melt butter in the same skillet. Stir in onions and garlic, and cook 2 to 3 minutes. Mix in bell peppers, season with basil and oregano, and stir in 1/4 cup wine. Continue to cook and stir until peppers and onions are tender, 5 to 7 minutes.</li>
+                <li>Return sausage slices to the skillet. Reduce heat to low, cover, and simmer 15 minutes, or until sausage is heated through, adding more wine if needed.</li>    
             </ol> 
     </body>
 </html>
