--- a/recipes/spaghetti.html
+++ b/recipes/spaghetti.html
@@ -20,7 +20,7 @@
                 <li>¾ cup grated Pecorino-Romano cheese</li>
                 <li>salt and freshly ground black pepper to taste</li>
             </ul>
-        <h3>Ingredients</h3>  
+        <h3>Steps</h3>  
             <ol>
                 <li>Bring a large pot of lightly salted water to a boil. Cook spaghetti in the boiling water, stirring occasionally until tender yet firm to the bite, about 12 minutes. Drain.</li>
                 <li>Heat a skillet over medium heat; cook and stir guanciale until crisp, 5 to 10 minutes.</li>
